# simple-game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  conanfile.txt  stabby2d
include/AssetManager/: AssetManager.hpp
include/AssetStore/: AssetManager.hpp
include/Components/: Position.hpp  RigidBodyComponent.hpp  Scale.hpp  SpriteComponent.hpp  TransformComponent.hpp  Velocity.hpp
include/ECS/: ECS.hpp
include/GameState/: GameState.hpp
include/System/: MovementSystem.hpp  RenderSystem.hpp
include/Utils/: Position.hpp  Scale.hpp  Velocity.hpp
src/: main.cpp
src/AssetManager/: AssetManager.cpp
src/AssetStore/: AssetManager.cpp  AssetStore.cpp  AssetStore.hpp
src/Components/: Position.hpp  SpriteComponent.hpp  TransformComponent.hpp
src/ECS/: ECS.cpp  ECS.hpp
src/GameState/: GameState.cpp  GameState.hpp
src/Logger/: Logger.cpp  Logger.hpp
src/System/: MovementSystem.hpp  RenderSystem.hpp
